Add simple CPIO and ls command

--- a/02_Booting/Makefile
+++ b/02_Booting/Makefile
@@ -6,16 +6,15 @@ MODEL = raspi3b
 LD := $(CROSS_COMPILE)ld
 OBJCOPY := $(CROSS_COMPILE)objcopy
 
-QEMUOPS = -cpu cortex-a53 -nographic -serial null -serial /dev/pts/5
-# tcp::1234,server,nowait
+QEMUOPS = -cpu cortex-a53 -nographic -initrd initramfs.cpio -serial null -serial pty
 BUILD_DIR = ./build
 
 BOOTLOADER_OBJS = $(wildcard $(BUILD_DIR)/bootloader/*.o)
 KERNEL_OBJS = $(wildcard $(BUILD_DIR)/kernel/*.o)
 COMMAND_LIB := $(BUILD_DIR)/lib/libcommand.a
 
-all: kernel8.img
-kernel-pure: kernel8_pure.img
+all: kernel8.img initramfs.cpio
+kernel-pure: kernel8_pure.img initramfs.cpio
 
 build-bootloader:
 	$(MAKE) -C bootloader
@@ -33,6 +32,9 @@ kernel8_pure.img: ./kernel/linker.ld build-kernel build-lib
 	$(LD) -T ./kernel/linker.ld -o $(BUILD_DIR)/kernel8_pure.elf --whole-archive $(COMMAND_LIB) $(KERNEL_OBJS)
 	$(OBJCOPY) $(BUILD_DIR)/kernel8_pure.elf -O binary kernel8_pure.img
 
+initramfs.cpio:
+	cd rootfs && find . | cpio -o -H newc > ../initramfs.cpio
+
 qemu: kernel8.img
 	@qemu-system-aarch64 -M $(MODEL) -kernel kernel8.img $(QEMUOPS) 
 qemu-debug: kernel8.img
@@ -40,5 +42,6 @@ qemu-debug: kernel8.img
 
 clean:
 	rm -rf $(BUILD_DIR) *.img
+	rm -f initramfs.cpio
 	$(MAKE) -C bootloader clean
 	$(MAKE) -C kernel clean
